Migrated js functionality to wasm.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <title>MetaFashion</title>
     <meta name="description"
           content="MetaFashionNFT is a collection of 10K generative 3D art pieces about to drop on the Ethereum blockchain!" />
-    <link rel="icon" type="image/svg+xml" href="/assets/logo-mf.svg">
-    <script src="https://kit.fontawesome.com/4fe1002595.js" crossorigin="anonymous"></script>
+
+    <link data-trunk rel="icon" type="image/svg+xml" href="/assets/images/logo-mf.svg">
 
     <link data-trunk rel="css" href="/node_modules/bulma/css/bulma.min.css" />
-    <link data-trunk rel="css" href="/node_modules/@creativebulma/bulma-collapsible/dist/css/bulma-collapsible.min.css" />
+    <link data-trunk rel="css"
+          href="/node_modules/@creativebulma/bulma-collapsible/dist/css/bulma-collapsible.min.css" />
     <link data-trunk rel="css" href="/node_modules/bulma-timeline/dist/css/bulma-timeline.min.css" />
-    <link data-trunk rel="css" href="/node_modules/bulma/css/bulma.min.css" />
-    <link data-trunk rel="css" href="/node_modules/bulma/css/bulma.min.css" />
     <link data-trunk rel="css" href="/assets/glitch.css" />
     <link data-trunk rel="css" href="/assets/style.css" />
 
@@ -21,30 +20,8 @@
     <link data-trunk rel="copy-dir" href="assets/images"/>
 
     <link rel="preload" href="/fonts/Jura-Regular.woff2" as="font" type="font/woff2" crossorigin>
-<!--    <script src="/assets/app.js" type="module" defer></script>-->
+    <script src="https://kit.fontawesome.com/4fe1002595.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-    <!--Site-->
-    <div id="site">
-        <!--VIP-->
-        <div id="vip" class="modal">
-            <div class="modal-background"></div>
-            <div class="modal-content">
-                <div class="container">
-                    <section class="section" >
-                        <h1 class="title">VIP Signup</h1>
-                        <div class="block">
-                            <p>> Connect your wallet to add your address to the MetaFashion VIP list</p>
-                            <p>> Sign the message so that only MetaFashion HQ can decrypt it</p>
-                        </div>
-                        <div class="block">
-                            <a class="button modal-button vip" data-target="vip">Connect Wallet</a>
-                        </div>
-                    </section>
-                </div>
-            </div>
-            <button class="modal-close is-large" aria-label="close"></button>
-        </div>
-    </div>
 </body>
 </html>
