Further adjustments to deployment.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <link data-trunk rel="icon" type="image/svg+xml" href="/assets/images/logo-mf.svg">
 
-    <link data-trunk rel="css" href="/node_modules/bulma/css/bulma.min.css" />
-    <link data-trunk rel="css"
-          href="/node_modules/@creativebulma/bulma-collapsible/dist/css/bulma-collapsible.min.css" />
-    <link data-trunk rel="css" href="/node_modules/bulma-timeline/dist/css/bulma-timeline.min.css" />
+    <link data-trunk rel="css" href="/assets/bulma.min.css" />
+    <link data-trunk rel="css" href="/assets/bulma-collapsible.min.css" />
+    <link data-trunk rel="css" href="/assets/bulma-timeline.min.css" />
     <link data-trunk rel="css" href="/assets/glitch.css" />
     <link data-trunk rel="css" href="/assets/style.css" />
 
