--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <link data-trunk rel="copy-dir" href="assets/fonts"/>
     <link data-trunk rel="copy-dir" href="assets/images"/>
+    <link data-trunk rel="copy-file" href="assets/404.mp4"/>
+    <link data-trunk rel="copy-file" href="ipfs-404.html"/>
 
     <link rel="preload" href="/fonts/Jura-Regular.woff2" as="font" type="font/woff2" crossorigin>
     <script src="https://kit.fontawesome.com/4fe1002595.js" crossorigin="anonymous" defer></script>
