Added wallet connection.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
           content="MetaFashionNFT is a collection of 10K generative 3D art pieces about to drop on the Ethereum blockchain!" />
 
+    <!-- todo: update icon -->
     <link data-trunk rel="icon" type="image/svg+xml" href="/assets/images/logo-mf.svg">
 
     <link data-trunk rel="css" href="/assets/bulma.min.css" />
