Various animation improvements.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link data-trunk rel="css" href="/assets/bulma-collapsible.min.css" />
     <link data-trunk rel="css" href="/assets/bulma-timeline.min.css" />
     <link data-trunk rel="css" href="/assets/glitch.css" />
+    <link data-trunk rel="css" href="/assets/animate.min.css" />
+    <link data-trunk rel="css" href="/assets/modal-fx.min.css" />
     <link data-trunk rel="css" href="/assets/style.css" />
 
     <link data-trunk rel="copy-dir" href="assets/fonts"/>
